--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <img src="imagens/bitmap.png" alt="">
         <div>
-            <label for="">pesquise</label>
+            <label for=""><img src="imagens/lupa (2).png" alt="" class="icolupa"></label>
             <input type="text" placeholder= "Pesquisar">
 
         </div>
